--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
         "php": "^8.1",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "nesbot/carbon": "^2.68",
         "php-ai/php-ml": "*",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "symfony/process": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
